--- a/Mini-Projects/Weather-App/style.css
+++ b/Mini-Projects/Weather-App/style.css
@@ -4,3 +4,18 @@
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
+
+body{
+  background: #222;
+}
+
+.card{
+  width: 90%;
+  max-width: 470px;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  color: #fff;
+  margin: 100px auto 0;
+  padding: 40px 35px;
+  border-radius: 20px;
+  text-align: center;
+}
