--- a/Mini-Projects/Weather-App/style.css
+++ b/Mini-Projects/Weather-App/style.css
@@ -19,3 +19,37 @@ body{
   border-radius: 20px;
   text-align: center;
 }
+
+.search{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search input{
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 60px;
+  border-radius: 30px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
+}
+
+.search button{
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.search button img{
+  width: 16px;
+}
