--- a/Mini-Projects/Quiz-App/style.css
+++ b/Mini-Projects/Quiz-App/style.css
@@ -49,9 +49,13 @@ body{
   cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover:not([disabled]){
   background: #222;
   color: #fff;
+}
+
+.btn:disabled{
+  cursor: no-drop;
 }
 
 #next-btn{
